added weather project

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
 								<h2>Weather Data Cleaning in SQL and Visualization in R</h2>
 								<p><br /><br />
-								<a href="">View Project</a></p>
+								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
