--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,14 +42,15 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>KYLE ROZIC</h2>
-							<p>Chemical analyst looking to move into a technical Data Analyst position in a great data team. Enjoys hands-on, systematic troubleshooting of complex analytical instrumentation and performs well in high stress environments. <br />
+							<p>Chemical analyst looking to move into a technical Data Analyst position in a great data team.<br />
+							<p>Technical data analyst looking to move into a technical Data Analyst position in a great data team.<br />
 							<br />
 							<br />
 							</p>
 							<ul class="icons">
 								<li><font size="+3"><a href="https://www.linkedin.com/in/kyle-rozic-651a0794/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></font></li>
 								<li><font size="+3"><a href="https://github.com/krozic" class="icon brands fa-github"><span class="label">Github</span></a></font></li>
-								<li><font size="+3"><a href="#" class="icon fa-address-card"><span class="label">Resume</span></a></font></li>
+								<!-- <li><font size="+3"><a href="#" class="icon fa-address-card"><span class="label">Resume</span></a></font></li> -->
 								<!-- <li><font size="+3"><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></font></li> -->
 							</ul>
 							<!-- <ul class="actions special">
@@ -82,12 +83,12 @@
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
 								<p>Interactive map showing division population changes based on user chosen dates. Raw data from <a href="https://www.statcan.gc.ca/">Statistics Canada</a> was used to produce the visualization.<br /><br />
-									<a href="">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
+									<a href="">XView Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
-								<h2>Weather Data Cleaning in SQL and Visualization in R</h2>
+								<h2>Weather Data Cleaning and Visualization in R</h2>
 								<p><br /><br />
 								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
 							</div>
@@ -96,7 +97,7 @@
 							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
 								<h2>Swiftkey Word Predictor</h2>
 								<p><br /><br />
-									<a href="">View Project</a> | <a href="http://html5up.net">View App</a></p>
+									<a href="">XView Project</a> | <a href="http://html5up.net">XView App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -109,9 +110,9 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/covid19.jpg" alt="" /></div><div class="content">
-								<h2>Exploration of Covid-19 data with SQL and Visualization in Tableau<br />
+								<h2>Covid-19 Data Dashboard<br />
 								</h2>
-								<p><br /><br />
+								<p>Statistics and research data was sourced from <a href="https://ourworldindata.org/covid-deaths">Our World in Data</a> to visualize how covid-19 has spread over time and between countries. The data was explored and cleaned with Microsoft SQL and visualized in Tableau.<br /><br />
 								<a href="https://github.com/krozic/Covid-Visualization-Tableau">View Project</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
 						</section>
@@ -172,7 +173,7 @@
 							<div class="image"><img src="images/TIFF19.jpg" alt="" /></div><div class="content">
 								<h2>TIFF Data Scraping with Organization in Excel</h2>
 								<p>Sometimes it is difficult to tell which movies are worth seeing at a film festival since they have never been seen before. In 2019, TIFF decided to allow attendees to "heart" the films they wished to see. I decided to use this as a metric for "popularity" so I could better decide which films to see.<br /><br />
-								<a href="">View Project</a></p>
+								<a href="">XView Project</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -206,7 +207,7 @@
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul> -->
 						<ul class="copyright">
-							<li>&copy; 2021 Kyle Rozic</li><li>Host: <a href="https://pages.github.com/">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2021 Kyle Rozic</li><li>Host: <a href="https://github.com/krozic/krozic.github.io">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
