--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title></title>
+		<title>Kyle Rozic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -67,12 +62,22 @@
 								<h2>Data Analytics Tools Used</h2>
 								<p></p>
 							</header>
+							<ul class="icons minor">
+								<li><span title="R Studio"><span class="iconify-inline" data-icon="la:r-project" data-width="60"></span></span>test</li><p>test</p>
+							</ul>
 							<ul class="icons major">
 								<li><span title="R Studio"><span class="iconify" data-icon="la:r-project" data-width="60"></span></span></li>
 								<li><span title="Python"><span class="iconify" data-icon="fa-brands:python" data-width="50"></span></span></li>
 								<li><span title="SQL"><span class="iconify" data-icon="carbon:sql" data-width="65"></span></span></li>
 								<li><span title="Microsoft Excel"><span class="iconify" data-icon="file-icons:microsoft-excel" data-width="55"></span></span></li>
 								<li><span title="Tableau"><span class="iconify" data-icon="ion:logo-tableau" data-width="50"></span></span></li>
+							</ul>
+							<ul class="icons minor">
+								<li>R Studio</li>
+								<li>R Studio</li>
+								<li>R Studio</li>
+								<li>R Studio</li>
+								<li>R Studio</li>
 							</ul>
 						</div>
 					</section>
@@ -200,12 +205,10 @@
  -->
 				<!-- Footer -->
 					<footer id="footer">
-<!-- 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						</ul> -->
+							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						</ul>
 						<ul class="copyright">
 							<li>&copy; 2021 Kyle Rozic</li><li>Host: <a href="https://github.com/krozic/krozic.github.io">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
