added swiftkey project

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
 								<h2>Swiftkey Word Predictor</h2>
 								<p><br /><br />
-									<a href="">XView Project</a> | <a href="http://html5up.net">XView App</a></p>
+									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="http://html5up.net">XView App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
