--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 								<h2>Data Analytics Tools Used</h2>
 								<p></p>
 							</header>
-							<ul class="icons minor">
+							<!-- <ul class="icons minor">
 								<li><span title="R Studio"><span class="iconify-inline" data-icon="la:r-project" data-width="60"></span></span>test</li><p>test</p>
-							</ul>
+							</ul> -->
 							<ul class="icons major">
 								<li><span title="R Studio"><span class="iconify" data-icon="la:r-project" data-width="60"></span></span></li>
 								<li><span title="Python"><span class="iconify" data-icon="fa-brands:python" data-width="50"></span></span></li>
@@ -72,13 +72,13 @@
 								<li><span title="Microsoft Excel"><span class="iconify" data-icon="file-icons:microsoft-excel" data-width="55"></span></span></li>
 								<li><span title="Tableau"><span class="iconify" data-icon="ion:logo-tableau" data-width="50"></span></span></li>
 							</ul>
-							<ul class="icons minor">
+							<!-- <ul class="icons minor">
 								<li>R Studio</li>
 								<li>R Studio</li>
 								<li>R Studio</li>
 								<li>R Studio</li>
 								<li>R Studio</li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
@@ -88,21 +88,14 @@
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
 								<p>Interactive map showing division population changes based on user chosen dates. Raw data from <a href="https://www.statcan.gc.ca/">Statistics Canada</a> was used to produce the visualization.<br /><br />
-									<a href="">XView Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
-								<h2>Weather Data Cleaning and Visualization in R</h2>
-								<p><br /><br />
-								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
+									<a href="https://github.com/krozic/statcan_population_data">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
 								<h2>Swiftkey Word Predictor</h2>
 								<p><br /><br />
-									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="http://html5up.net">XView App</a></p>
+									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">XView App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -121,10 +114,17 @@
 								<a href="https://github.com/krozic/Covid-Visualization-Tableau">View Project</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
 						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
+								<h2>Weather Data Cleaning and Visualization in R</h2>
+								<p><br /><br />
+								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
+							</div>
+						</section>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Skills and Tool Knowledge</h2>
@@ -133,8 +133,8 @@
 							</header>
 							<ul class="features">
 								<li class="icon brands fa-r-project">
-									<!-- <li>
-										<i class="iconify" data-icon="la:r-project" data-width="60"></i> -->
+									<li>
+										<i class="iconify" data-icon="la:r-project" data-width="60"></i>
 									
 									<h3>R Studio</h3>
 									<p>R Studio was used to perform most of the data programming projects.</p>
@@ -161,7 +161,7 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Personal Projects -->
 					<section id="two" class="wrapper alt style2">
@@ -184,7 +184,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/File-Management.jpg" alt="" /></div><div class="content">
 								<h2>Auto File Management</h2>
-								<p>An interactive python tool for keeping track of transferred videos, pictures, documents etc.<br /><br />
+								<p>An interactive python tool for keeping track of videos, pictures, documents etc. that have been backed up. `tqdm` is used to monitor file transfer progress. Items that are backed up are recorded in a .json file.<br /><br />
 								<a href="https://github.com/krozic/file_management/blob/master/file_management.py">View Project</a></p>
 							</div>
 						</section>
