--- a/index.html
+++ b/index.html
@@ -87,22 +87,23 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
-								<p>Interactive map showing division population changes based on user chosen dates. Raw data from <a href="https://www.statcan.gc.ca/">Statistics Canada</a> was used to produce the visualization.<br /><br />
+								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. <br />Data from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a> was used to produce this application.<br /><br />
 									<a href="https://github.com/krozic/statcan_population_data">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
 								<h2>Swiftkey Word Predictor</h2>
-								<p><br /><br />
-									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">XView App</a></p>
+								<p>An application that accepts a string of words and predicts the next word using a corpus sample extracted from the SwiftKey dataset provided by Coursera. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations. Shiny was used to build the application UI.<br /><br />
+									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Human-Activity-Prediction.jpg" alt="" /></div><div class="content">
 								<h2>Human Activity Prediction Using<br />
 								Machine Learning</h2>
-								<p>Predict exercise type based on raw sensor data collected from a wearable device using the `caret` package in R.<br /><br />
+								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. Sensor data was collected on 4 healthy subjects performing 8 hours of activities.<br /> 
+								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">Pontifical Catholic University of Rio de Janeiro</a> (PUC-Rio).<br /><br />
 								<a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Project</a></p>
 							</div>
 						</section>
@@ -117,7 +118,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
 								<h2>Weather Data Cleaning and Visualization in R</h2>
-								<p><br /><br />
+								<p>Storm data spanning from 1950-2011 was acquired from the National Weather Service. This data was processed and analyzed to determine which weather related events were the most costly to human life as well as property and crops.<br /><br />
 								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
 							</div>
 						</section>
@@ -170,7 +171,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/Nvidia-Scraper-Minimal.jpg" alt="" /></div><div class="content">
 								<h2>Nvidia Graphics Card Scraper</h2>
-								<p>A python Web Scraper used to search a number of different retailers to check for stock. The package `twilio` is used to send a text when stock is received. This app was used to acquire a personal graphics card during period of low stock.<br /><br />
+								<p>A python Web Scraper used to search a number of different retailers to check for stock. The package `twilio` is used to send a text when stock is received. This app was used to acquire a personal graphics card during the "<a href="https://www.bbc.com/news/technology-55755820">Great Graphics Card Shortage of 2020</a>".<br /><br />
 								<a href="https://github.com/krozic/Nvidia-Graphics-Card-Scraper/blob/main/scraper.py">View Project</a></p>
 							</div>
 						</section>
@@ -183,7 +184,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/File-Management.jpg" alt="" /></div><div class="content">
-								<h2>Auto File Management</h2>
+								<h2>Auto Backup & File Management</h2>
 								<p>An interactive python tool for keeping track of videos, pictures, documents etc. that have been backed up. `tqdm` is used to monitor file transfer progress. Items that are backed up are recorded in a .json file.<br /><br />
 								<a href="https://github.com/krozic/file_management/blob/master/file_management.py">View Project</a></p>
 							</div>
