added profile description

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>KYLE ROZIC</h2>
-							<p>Chemical analyst looking to move into a technical Data Analyst position in a great data team.<br />
-							<p>Technical data analyst looking to move into a technical Data Analyst position in a great data team.<br />
+							<p>Data analyst with experience cleaning, analyzing, visualizing and interpreting data. The tools I am most comfortable with include R, python, SQL, Excel, and Tableau.<br />
 							<br />
 							<br />
 							</p>
@@ -87,7 +86,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
-								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. <br />Data from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a> was used to produce this application.<br /><br />
+								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. Data was sourced from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a>.<br /><br />
 									<a href="https://github.com/krozic/statcan_population_data">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
@@ -102,8 +101,8 @@
 							<div class="image"><img src="images/Human-Activity-Prediction.jpg" alt="" /></div><div class="content">
 								<h2>Human Activity Prediction Using<br />
 								Machine Learning</h2>
-								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. Sensor data was collected on 4 healthy subjects performing 8 hours of activities.<br /> 
-								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">Pontifical Catholic University of Rio de Janeiro</a> (PUC-Rio).<br /><br />
+								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. 
+								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">UCI repo</a> for PUC-Rio.<br /><br />
 								<a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Project</a></p>
 							</div>
 						</section>
@@ -116,7 +115,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/NOAA NWS2.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/NOAA NWS-Tall.jpg" alt="" /></div><div class="content">
 								<h2>Weather Data Cleaning and Visualization in R</h2>
 								<p>Storm data spanning from 1950-2011 was acquired from the National Weather Service. This data was processed and analyzed to determine which weather related events were the most costly to human life as well as property and crops.<br /><br />
 								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
@@ -185,7 +184,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/File-Management.jpg" alt="" /></div><div class="content">
 								<h2>Auto Backup & File Management</h2>
-								<p>An interactive python tool for keeping track of videos, pictures, documents etc. that have been backed up. `tqdm` is used to monitor file transfer progress. Items that are backed up are recorded in a .json file.<br /><br />
+								<p>An interactive python tool for keeping track of videos, pictures, documents etc. that have been backed up. The `tqdm` package in python is used to monitor file transfer progress. Records of previous backups are stored in a .json file.<br /><br />
 								<a href="https://github.com/krozic/file_management/blob/master/file_management.py">View Project</a></p>
 							</div>
 						</section>
