--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							<div class="image"><img src="images/TIFF19.jpg" alt="" /></div><div class="content">
 								<h2>TIFF Data Scraping with Organization in Excel</h2>
 								<p>Sometimes it is difficult to tell which movies are worth seeing at a film festival since they have never been seen before. In 2019, TIFF decided to allow attendees to "heart" the films they wished to see. I decided to use this as a metric for "popularity" so I could better decide which films to see.<br /><br />
-								<a href="">XView Project</a></p>
+								<a href="https://github.com/krozic/TIFF-2019">View Project</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
