added personal links to bottom

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kyle-rozic-651a0794/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/krozic" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; 2021 Kyle Rozic</li><li>Host: <a href="https://github.com/krozic/krozic.github.io">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
