--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
 								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. Data was sourced from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a>.<br /><br />
-									<a href="https://github.com/krozic/statcan_population_data">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
+									<a href="https://www.kylerozic.com/statcan_population_data/">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
