added both reports and github links

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
 								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. Data was sourced from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a>.<br /><br />
-									<a href="https://www.kylerozic.com/statcan_population_data/">View Project</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
+									<a href="https://www.kylerozic.com/statcan_population_data/">View Report</a> | <a href="https://github.com/krozic/statcan_population_data">View Github</a> | <a href="https://krozic.shinyapps.io/shiny_app/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
 								<h2>Swiftkey Word Predictor</h2>
 								<p>An application that accepts a string of words and predicts the next word using a corpus sample extracted from the SwiftKey dataset provided by Coursera. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations. Shiny was used to build the application UI.<br /><br />
-									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Project</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
+									<a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Report</a> | <a href="https://github.com/krozic/SwiftKey-Word-Predictor">View Github</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -103,7 +103,7 @@
 								Machine Learning</h2>
 								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. 
 								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">UCI repo</a> for PUC-Rio.<br /><br />
-								<a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Project</a></p>
+								<a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Report</a> | <a href="https://github.com/krozic/Human-Activity-Recognition-with-caret">View Github</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -111,14 +111,14 @@
 								<h2>Covid-19 Data Dashboard<br />
 								</h2>
 								<p>Statistics and research data was sourced from <a href="https://ourworldindata.org/covid-deaths">Our World in Data</a> to visualize how covid-19 has spread over time and between countries. The data was explored and cleaned with Microsoft SQL and visualized in Tableau.<br /><br />
-								<a href="https://github.com/krozic/Covid-Visualization-Tableau">View Project</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
+								<a href="https://github.com/krozic/Covid-Visualization-Tableau">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/NOAA NWS-Tall.jpg" alt="" /></div><div class="content">
 								<h2>Weather Data Cleaning and Visualization in R</h2>
 								<p>Storm data spanning from 1950-2011 was acquired from the National Weather Service. This data was processed and analyzed to determine which weather related events were the most costly to human life as well as property and crops.<br /><br />
-								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Project</a></p>
+								<a href="http://www.kylerozic.com/Weather-Data-Cleaning-and-Visualization/">View Report</a> | <a href="https://github.com/krozic/Weather-Data-Cleaning-and-V">View Github</a></p>
 							</div>
 						</section>
 					</section>
@@ -171,21 +171,21 @@
 							<div class="image"><img src="images/Nvidia-Scraper-Minimal.jpg" alt="" /></div><div class="content">
 								<h2>Nvidia Graphics Card Scraper</h2>
 								<p>A python Web Scraper used to search a number of different retailers to check for stock. The package `twilio` is used to send a text when stock is received. This app was used to acquire a personal graphics card during the "<a href="https://www.bbc.com/news/technology-55755820">Great Graphics Card Shortage of 2020</a>".<br /><br />
-								<a href="https://github.com/krozic/Nvidia-Graphics-Card-Scraper/blob/main/scraper.py">View Project</a></p>
+								<a href="https://github.com/krozic/Nvidia-Graphics-Card-Scraper/blob/main/scraper.py">View Github</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/TIFF19.jpg" alt="" /></div><div class="content">
 								<h2>TIFF Data Scraping with Organization in Excel</h2>
 								<p>Sometimes it is difficult to tell which movies are worth seeing at a film festival since they have never been seen before. In 2019, TIFF decided to allow attendees to "heart" the films they wished to see. I decided to use this as a metric for "popularity" so I could better decide which films to see.<br /><br />
-								<a href="https://github.com/krozic/TIFF-2019">View Project</a></p>
+								<a href="https://github.com/krozic/TIFF-2019">View Github</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/File-Management.jpg" alt="" /></div><div class="content">
 								<h2>Auto Backup & File Management</h2>
 								<p>An interactive python tool for keeping track of videos, pictures, documents etc. that have been backed up. The `tqdm` package in python is used to monitor file transfer progress. Records of previous backups are stored in a .json file.<br /><br />
-								<a href="https://github.com/krozic/file_management/blob/master/file_management.py">View Project</a></p>
+								<a href="https://github.com/krozic/file_management/blob/master/file_management.py">View Github</a></p>
 							</div>
 						</section>
 					</section>
