--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>KYLE ROZIC</h2>
-							<p>Data analyst with experience cleaning, analyzing, visualizing and interpreting data. The tools I am most comfortable with include R, python, SQL, Excel, and Tableau.<br />
+							<p>Data analyst with experience cleaning, analyzing, visualizing and interpreting data. Enjoys exploring and analyzing large datasets to extract actionable insights and would like to use these skills to increase performance and identify advantageous business opportunities.<br />
 							<br />
 							<br />
 							</p>
@@ -99,8 +99,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Human-Activity-Prediction.jpg" alt="" /></div><div class="content">
-								<h2>Human Activity Prediction Using<br />
-								Machine Learning</h2>
+								<h2>Human Activity Prediction Using Machine Learning</h2>
 								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. 
 								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">UCI repo</a> for PUC-Rio.</p>
 								<p><a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Report</a> | <a href="https://github.com/krozic/Human-Activity-Recognition-with-caret">View Github</a></p>
@@ -108,8 +107,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/covid19.jpg" alt="" /></div><div class="content">
-								<h2>Covid-19 Data Dashboard<br />
-								</h2>
+								<h2>Covid-19 Data Dashboard</h2>
 								<p>Statistics and research data was sourced from <a href="https://ourworldindata.org/covid-deaths">Our World in Data</a> to visualize how covid-19 has spread over time and between countries. The data was explored and cleaned with Microsoft SQL and visualized in Tableau.</p>
 								<p><a href="https://github.com/krozic/Covid-Visualization-Tableau">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
